# ezflow-copilot

./: agent.ipynb  main.py  pyproject.toml
src/backend/: config.py  prompts.py
src/backend/ai/agents/: anomaly_detection_agent.py  auditor_agent.py  deepagent.ipynb  doc_agent.py  sql_agent.py
src/backend/ai/agents/analyst/: agent.py
src/backend/ai/agents/sqlanalyst/: agent.py
src/backend/ai/guardrails/: contentfilter_guardrail.py  safety_guardrail.py
src/backend/ai/middleware/: delete_old_memory.py  safety_guardrail.py
src/backend/ai/prompts/: prompt.py  sql_analyst.py
src/backend/ai/state/: customer_state.py
src/backend/ai/tools/: retrieve_context_tool.py  sql_analyst_tool.py
src/backend/api/: limiter.py
src/backend/api/v1/: api.py
src/backend/api/v1/endpoints/: audit.py  database.py  document.py  submission.py  users.py
src/backend/core/: config.py
src/backend/schemas/: audit_response.py  submission.py  user.py
src/backend/services/: auditor_service.py  mongo_vectorstore_service.py  sql_service.py  submission_service.py
